--- a/simplesignage/manager/templates/imagelist.html
+++ b/simplesignage/manager/templates/imagelist.html
@@ -1,8 +1,28 @@
+{%load static%}
 {% block imageList %}
-  <form class="form" action="apply_changes" method="post">
+  <!-- Don't forget the CSRF token, otherwise Django won't be happy -->
+  <form action="apply_changes" method="post" target="_self">{% csrf_token %}
     {% for file in File %}
-      <input type="checkbox" name="{{file}}" value="{{file}}">{{file}}<br>
+      <!-- use static "content" prefix to the file -->
+        <!-- 'img':{'path':images[0],'use':False,'startDate':'2019-6-24','endDate':'2019-12-30','delete':False} -->
+      <div class="content">
+        <img src="{% static 'content' %}/{{file.path}}" alt="Image Not Found">
+
+        <div class="content settings">
+          <input type="checkbox" name="{{file.path}}_use" value="{{file.use}}"><br>
+          Start Date:<br>
+          <input type="date" class="content settings date" name="{{file.path}}_sdate" value="{{file.startDate}}"><br>
+          End Date:<br>
+          <input type="date" class="content settings date" name="{{file.path}}_edate" value="{{file.endDate}}"><br>
+        </div>
+        <div class="content settings">
+          Display Time:<br>
+          <input type="number" class="content settings date" name="dispTime" value="{{dispTime|default:15}}"><br>
+        </div>
+      </div>
+
     {% endfor %}
-    <button type="submit" name="button">Apply Changes</button>
+    <br>
+    <input type="submit" class="content submit" value="Apply Changes" class="form submit">
   </form>
 {% endblock imageList %}
