--- a/simplesignage/manager/templates/index.html
+++ b/simplesignage/manager/templates/index.html
@@ -4,22 +4,15 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="{% static 'css/master.css' %}">
+    <link rel="stylesheet" href="{% static './css/master.css' %}">
+    <link rel="icon" href="{% static 'icon.png' %}">
   </head>
   <body>
     <p class="p epoch">Unix Epoch: {{os}}</p>
-
-    <!--{%for file in File%}
-    <p><form method=POST target="./manager/{{url.apply}}" style="width:500"></p>
-    <li>{{file}}</li>
-    {%endfor%}-->
-
     <div class="imagelist">
       {% include "imagelist.html" %}
     </div>
   </body>
-  <footer>
-    <p>YOU: {{you}}</p>
-    <p>{{me}}</p>
-  </footer>
+  <!-- Footer Template containing the file upload field -->
+  {% include "footer.html" %}
 </html>
