database is writing and reading finally

--- a/simplesignage/manager/templates/footer.html
+++ b/simplesignage/manager/templates/footer.html
@@ -11,7 +11,9 @@
           <input type="submit" name="filesubmit" value="Upload">
         </form>
       </td>
-
+      <td align="center">
+        <a href="/admin">Admin Site</a>
+      </td>
       <td align="right">
         YOU: {{you}}<br>
         <form action="{% url 'logout' %}">
