--- a/simplesignage/manager/templates/footer.html
+++ b/simplesignage/manager/templates/footer.html
@@ -1,25 +1,19 @@
 {% load static %}
-<br>
 <footer>
   <table >
+    <div class="mui-divider"></div>
     <tr>
       <td>
         <!-- Don't forget the CSRF token, otherwise Django won't be happy -->
-        Upload files drop: PNG, JPG, MP4, PDF, or ZIP file here:
         <form action="upload_file" enctype="multipart/form-data" method="post" target="_self">{% csrf_token %}
-          <input type="file" name="fileupload" value="">
-          <input type="submit" name="filesubmit" value="Upload">
+          <input type="file" class="mui-btn mui-btn--small mui-btn--primary" name="fileupload" value="" accept="application/pdf, image/*, video/*"><!--multiple-->
+          <input type="submit" class="mui-btn mui-btn--small mui-btn--primary" name="filesubmit" value="Upload">
         </form>
       </td>
-      <td align="center">
-        <a href="/admin">Admin Site</a>
-      </td>
-      <td align="right">
-        YOU: {{you}}<br>
-        <form action="{% url 'logout' %}">
-          <button type="submit" class='logout'>Logout</button><br>
-        </form>
-      </td>
+      <!--td align="right">
+        <a href="/admin" target="_blank" class="mui-btn mui-btn--small mui-btn--primary">Admin</a>
+        <a href="{% url 'logout' %}" class="mui-btn mui-btn--small mui-btn--primary">Logout</a>
+      </td-->
     </tr>
   </table>
 </footer>
