--- a/simplesignage/manager/templates/index.html
+++ b/simplesignage/manager/templates/index.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" href="{% static './css/master-material.css' %}">
     <link rel="icon" href="{% static 'icon.png' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="{% static './js/timeload.js' %}" charset="utf-8"></script>
+    <!--script src="{% static './js/timeload.js' %}" charset="utf-8"></script-->
+    <script src="{% static './js/content.js' %}" charset="utf-8"></script>
     <!-- Material UI: https://www.muicss.com/ -->
     <link href="//cdn.muicss.com/mui-0.9.43/css/mui.min.css" rel="stylesheet" type="text/css"/>
-    <!--script src="//cdn.muicss.com/mui-0.9.43/js/mui.min.js"></script-->
+    <script src="//cdn.muicss.com/mui-0.9.43/js/mui.min.js"></script>
     <!-- Boilerplate HTML: https://www.muicss.com/docs/v1/webcomponents/boilerplate-html -->
     <script src="//cdn.muicss.com/mui-0.9.43/webcomponents/mui-webcomponents.js"></script>
+    <!-- Googleapi jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
 
+</video>
   <body>
     <div class="mui-appbar">
       <table width="100%">
@@ -31,14 +35,14 @@
         </tr>
       </table>
     </div>
-    <table>
+    <!--table>
       <tr>
         <td><p id="updateMe" class="p epoch"></p></td>
       </tr>
-    </table>
+    </table-->
 
     <div class="imagelist">
-      {% include "imagelist.html" %}
+      {% include "imagelist-material.html" %}
     </div>
   </body>
   <!-- Footer Template containing the file upload field -->
