--- a/simplesignage/manager/templates/screens.html
+++ b/simplesignage/manager/templates/screens.html
@@ -42,11 +42,12 @@
                 <td style="width:32%">{{ tv.addr }}</td>
                 <td style="width:20%">{{ tv.width }}x{{ tv.height }}</td>
                 <td align="right">
-                  <form class="mui-form" action="deletescreen" method="post">
+                  <button class="mui-btn mui-btn--small mui-btn--primary" type="button" name="DelBtn" onclick="deleteScreenConfirm('{{ tv.id }}', '{{ csrf_token }}')">Delete</button>
+                  <!--form class="mui-form" action="deletescreen" method="post">
                     {% csrf_token %}
                     <input type="hidden" name="Delete" value="{{ tv.id }}">
-                    <input class="mui-btn mui-btn--primary" type="submit" name="sub" value="Delete">
-                  </form>
+                    <input class="mui-btn mui-btn--small mui-btn--primary" type="submit" name="sub" value="Delete">
+                  </form -->
                 </td>
               </tr>
             </table>
@@ -89,6 +90,9 @@
                             <td>x</td>
                             <td class="mui-textfield">
                               <input type="number" name="height" value="">
+                            </td>
+                            <td>
+                              <button class="mui-btn mui-btn--primary" style="margin-left:2.5em" type="button" name="button" onclick="addScreen()">cancel</button>
                             </td>
                             <td>
                               <input style="margin-left:2.5em" class="mui-btn mui-btn--primary" type="submit" name="" value="Save">
